--- a/individual-project-IshaqSiddiqui-862610ccd47fd2ad346a92b603ba2fbbfe3711d2/.env.dist
+++ b/individual-project-IshaqSiddiqui-862610ccd47fd2ad346a92b603ba2fbbfe3711d2/.env.dist
@@ -1,8 +1,8 @@
 # MongoDB Config
-MONGODB_URL=mongodb+srv://stevecassidy:xyzzy@cluster0.dudxg.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://ishaq:ishaqrocks@cluster0.ar4d5hc.mongodb.net/?retryWrites=true&w=majority
 
 # Secret for signing cookies
-SESSION_DB_SECRET=reallysecretsecret
+SESSION_DB_SECRET=ishaqrocks
 
 # CORS Client Domain - domain of your front end client
 CORS_CLIENT_DOMAIN=http://localhost:3000
